--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <footer>
         <div class="content-wrap">
           <h2>Let's Keep in Touch!</h2>
-
+          <div class="contact-list">
           <!-- Social media and contact links. Add or remove any networks. -->
           <ul class="contact-list">
             <li><a href="mailto:rickyrodrigz1762003@gmail.com">rickyrodrigz1762003@gmail.com</a></li>
@@ -136,8 +136,10 @@
             <li><a href="https://www.facebook.com/profile.php?id=100036152793710/" target="Art\png\facebook.png">facebook</a></li>
             <li><a href="https://www.instagram.com/ricky_rodrigz/" target="_blank">Instagram</a></li>
             <li><a href="https://github.com/rickyrodrigues" target="_blank">
-              <img alt="github" src="Art\png\github (3).png" </a></li>
-          </ul>
+              <img alt="github" src="Art\png\github (3).png">github</a></li>
+          
+            </ul>
+
         </div>
       </footer>
      </div>
