--- a/index.html
+++ b/index.html
@@ -129,14 +129,13 @@
           <h2>Let's Keep in Touch!</h2>
           <div class="contact-list">
           <!-- Social media and contact links. Add or remove any networks. -->
-          <ul class="contact-list">
+          <ul class="png">
             <li><a href="mailto:rickyrodrigz1762003@gmail.com">rickyrodrigz1762003@gmail.com</a></li>
             <li><a href="R.D.Rodrigz.com" target="_blank">R.D.Rodrigz.com</a></li>
             <li><a href="https://www.linkedin.com/in/ricky-rodrigues-97b305201" target="_blank">linkedin</a></li>
             <li><a href="https://www.facebook.com/profile.php?id=100036152793710/" target="Art\png\facebook.png">facebook</a></li>
             <li><a href="https://www.instagram.com/ricky_rodrigz/" target="_blank">Instagram</a></li>
-            <li><a href="https://github.com/rickyrodrigues" target="_blank">
-              <img alt="github" src="Art\png\github (3).png">github</a></li>
+            <li><a href="https://github.com/rickyrodrigues" target="_blank">github</a></li>
           
             </ul>
 
