--- a/index.html
+++ b/index.html
@@ -88,19 +88,19 @@
         <!-- modelmaking -->
   <section class="modelmaking">
     <div class="modelmaking-details">
-            <img src="images\henry-be-unsplash (1).jpg" alt="description of image">
+            <img src="Art\Models\IMG_20211128_130107_1 (FILEminimizer).jpg" alt="description of image">
             <p> As a guy who cannot live without the sunday morning newspaper, I am someone whose mind iterates from reality to worlds unseen .Also this jackass being a knight in the lands of the victorian highlords is unpredictabelly the ocassional court jester, poet, historian ,knight and many more personas unseen.</p>
               <h3>MODEL MAKING</h3>
               
               <hr>
               <p>it is something that i do to keep the swaying heart in line with the calculating mind</p>
               <p>weapons</p>
-              <img src="Art\Models\IMG_20211128_130107_1.jpg" alt="description of image">
-              <img src="Art\Models\IMG_20211128_130144_1.jpg" alt="description of image">
-              <img src="Art\Models\IMG_20211128_130705_1.jpg" alt="description of image">
+              <img src="Art\Models\IMG_20211128_130107_1 (FILEminimizer).jpg" alt="description of image">
+              <img src="Art\Models\IMG_20211128_130144_1 (FILEminimizer).jpg" alt="description of image">
+              <img src="Art\Models\IMG_20211128_130507 (FILEminimizer).jpg" alt="description of image">
 
-              <img src="Art\Models\IMG_20211128_130625_1.jpg" alt="description of image">  
-              <img src="Art\Models\IMG_20211128_130507.jpg" alt="description of image">
+              <img src="Art\Models\IMG_20211128_130625_1 (FILEminimizer).jpg" alt="description of image">  
+              <img src="Art\Models\IMG_20211128_130705_1 (FILEminimizer).jpg" alt="description of image">
             </section>
         </div>
       
